# handlers/db.go
@@ -13,8 +13,60 @@ import (
 	"github.com/gorilla/mux"
 )
 
-// telemetry for db get
+// telemetry
+var telemetryDBGet *telemetry.Telemetry
 var telemetryDBAdd *telemetry.Telemetry
+
+// DBGetHandler is a http handler for db get requests
+// @Summary db service - retrieve
+// @Description gets a record
+// @Tags advanced services
+// @Produce json
+// @Param id path int true "database id"
+// @Success 200 {object} db.Person
+// @Failure 400 "error message"
+// @Router /Db/{id} [get]
+func DBGetHandler() func(w http.ResponseWriter, r *http.Request) {
+
+	// initialize telemetry only on the first call
+	if telemetryDBGet == nil {
+		telemetryDBGet = telemetry.InitializeTelemetryDefault("DBGet")
+	}
+
+	return func(w http.ResponseWriter, r *http.Request) {
+
+		// get {id} from the REST path
+		idAsString := mux.Vars(r)["id"]
+		idAsInt, err := strconv.Atoi(idAsString)
+		if err != nil {
+			errorTitle := "Invalid ID"
+			errorMsg := fmt.Sprintf("The id: %v is not a valid int!", idAsString)
+			http.Error(w, errorMsg, http.StatusBadRequest)
+			(*telemetryDBGet).LogError(errorTitle, fmt.Errorf(errorMsg+" IP: ", shared.GetIP(r)))
+			return
+		}
+
+		// get the record from the db
+		person := db.GetPersonByID(idAsInt)
+		if person != nil {
+			response, _ := json.Marshal(*person)
+			w.Header().Set("Content-Type", "application/json")
+			fmt.Fprintf(w, string(response))
+			(*telemetryDBGet).LogInfo("Call",
+				fmt.Sprintf("Retrieved id: %v name: %v IP: %v",
+					idAsInt,
+					(*person).Name,
+					shared.GetIP(r)))
+			return
+		}
+
+		// handle no matching id
+		errorTitle := "Missing ID"
+		errorMsg := fmt.Sprintf("The id: %v does not exist in the db!", idAsInt)
+		http.Error(w, errorMsg, http.StatusBadRequest)
+		(*telemetryDBGet).LogError(errorTitle, fmt.Errorf(errorMsg+" IP: ", shared.GetIP(r)))
+	}
+}
 
 // DBAddHandler is a http handler for adding / updating records
 // @Summary db service - add / update
@@ -26,7 +78,7 @@ var telemetryDBAdd *telemetry.Telemetry
 // @Param message body db.Person true "data"
 // @Success 200 "ok message"
 // @Failure 400 "error message"
-// @Router /db/{id} [post]
+// @Router /Db/{id} [post]
 func DBAddHandler() func(w http.ResponseWriter, r *http.Request) {
 
 	// initialize telemetry only on the first call
